fixed section benefits on tablet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,6 +148,10 @@ header .container{
     .container-sm{
         max-width: 600px;
     }
+
+    .benefits .col-4{
+        width: 50%;
+    }
 }
 
 @media screen and (min-width: 769px){
